<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/registration">
            
        <PreferenceScreen
            	android:key="register_singup"
                android:title="@string/register">
        </PreferenceScreen>
            
        <PreferenceScreen
            	android:key="log_out"
                android:title="@string/log_out"
                android:summary="@string/log_out_summary"
                android:enabled="false">
        </PreferenceScreen>

    </PreferenceCategory>
                
    <PreferenceCategory
            android:title="@string/localizer">
        
        <CheckBoxPreference 
            android:key="is_pooling_enabled"
            android:title="@string/pooling"/>

        <EditTextPreference
                android:key="localized_phone_number"
                android:title="@string/localized_phone_number"
                android:dialogTitle="@string/localized_phone_number"
                android:enabled="false"/>

        <EditTextPreference
                android:key="locaization_count"
                android:title="@string/locaization_count"
                android:summary="@string/locaization_count_summary"
                android:dialogTitle="@string/locaization_count" 
                android:enabled="false"/>

        <EditTextPreference
            android:key="last_locations_count"
            android:title="@string/last_locations_count"
            android:summary="@string/last_locations_count_summary"
            android:dialogTitle="@string/last_locations_count_dialog_title"
            android:defaultValue="1"
            android:inputType="number"
            android:selectAllOnFocus="true"
            />

        <EditTextPreference
            android:key="preference_user_to_track"
            android:title="@string/preference_user_to_track"
            android:dialogTitle="@string/username"
            android:defaultValue="user_generic"
            android:selectAllOnFocus="true"
            />

        <PreferenceScreen
                android:key="start"
                android:title="@string/start"
                android:summary="@string/start_summary"
                android:enabled="false">
        </PreferenceScreen>

    </PreferenceCategory>

    
</PreferenceScreen>

